# FinLLMQA

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  construct_vector_db.py  pyproject.toml  requirements.txt  setup.py
FinEval/: book_subject_mapping.json  evaluator.py  fineval_on_query_engine.ipynb  openai_evaluator.py  query_engine_evaluator.py  subject_mapping.json
FinEval/evaluators/: query_engine.py
FinancialEvaluation/: eval_chatgpt.py  eval_query_engine.py
FinancialEvaluation/evaluators/: query_engine.py
Fineval/: requirements.txt
agent/: client.py  tools.py
agent/autogen/: __init__.py
api/: __init__.py  core.py  embedding.py  stream_app.py
api/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  core-checkpoint.py  embedding-checkpoint.py
api/app/: __init__.py  stream_app.py
construct/: GraphRAG.ipynb  construct_stock_kg.ipynb  create_all_books_index.py  create_diff_books_index.py  create_diff_chunk_index.py  create_index_from_documents.ipynb  question.xlsx  question_classification.ipynb  test.ipynb
finllmqa/: __init__.py  construct_vector_db.py  craete_app.py
finllmqa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finllmqa/agent/: README.md  __init__.py  autogen_tools.py  langchain_tools.py  llama_index_tools.py  qa_tools.py  tools.py
finllmqa/api/: Untitled.ipynb  __init__.py  core.py  embedding.py
finllmqa/kg/: __init__.py
kg/: Untitled.ipynb
notebook/: Untitled.ipynb  construct_stock_kg.ipynb  create_index_from_documents.ipynb  create_kg_index.py  fineval_on_query_engine.ipynb  test.ipynb
vector_db/: __init__.py
(+181 files in other folders)
