[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finllmqa"
version = "0.0.1"
description = "Financial LLM QA App."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data"]
authors = [
    {name = "ethan", email = "ethanchen2277@gmail.com"},
]
classifiers = [
    "Intended Audience :: All Groups",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.dll", "*.lib", "*.pyd", "*.crt", "*.ini", "*.log4cxx"]

[tool.setuptools.packages.find]
where = ["."] 
include = ["finllmqa*"]
exclude = ["FinEval*", "construct*", "tests*"] 